--- a/config/locales/ro.yml
+++ b/config/locales/ro.yml
@@ -20,6 +20,20 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 ro:
-  hello: 'Bine ați venit'
-  auth: 'Autentificați-vă ca să puteți începe'
-  required_field: 'Acest câmp este obligatoriu'
+  hello: "Bine ați venit"
+  auth: "Autentificați-vă ca să puteți începe"
+  table:
+    empty_text: 'Nu sunt înregistrări'
+  student_groups:
+    new:
+      title: 'Adaugă o clasă nouă'
+    edit:
+      title: 'Editare clasă'
+    index:
+      title: 'Clase'
+      list: 'Lista claselor'
+      table:
+        promotion: 'Promoția'
+        suffix: 'Paralela'
+        profile_slug: 'Profilul'
+        actions: 'Acțiuni'
