--- a/config/locales/ro.yml
+++ b/config/locales/ro.yml
@@ -20,6 +20,12 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 ro:
+  time:
+    formats:
+      long: '%Y-%m-%d %H:%M:%S'
+  date:
+    formats:
+      long: '%Y-%m-%d'
   hello: "Bine ați venit"
   auth: "Autentificați-vă ca să puteți începe"
   table:
