--- a/config/locales/ro.yml
+++ b/config/locales/ro.yml
@@ -20,6 +20,47 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 ro:
   activerecord:
+    errors:
+      models:
+        student:
+          attributes:
+            last_name:
+              blank: 'Numele este obligatoriu'
+              too_short: 'Numele trebuie să conțină cel puțin 3 caractere'
+              too_long: 'Numele nu trebuie să conțină mai mult de 20 caractere'
+              invalid: 'Numele poate conține doar litere'
+            first_name:
+              blank: 'Prenumele este obligatoriu'
+              too_short: 'Prenumele trebuie să conțină cel puțin 3 caractere'
+              too_long: 'Prenumele nu trebuie să conțină mai mult de 20 caractere'
+              invalid: 'Prenumele poate conține doar litere'
+            born_at:
+              blank: 'Data nașterii este obligatorie'
+            inside_code_token:
+              blank: 'Data nașterii este obligatorie'
+            idnp_token:
+              invalid: 'IDNP poate conține doar cifre'
+              too_short: 'Lungimea este egală cu 13'
+        student_group:
+          attributes:
+            suffix:
+              blank: 'Paralela este obligatorie'
+            promotion:
+              blank: 'Anul de început este obligatoriu'
+        teacher:
+          attributes:
+            last_name:
+              blank: 'Numele este obligatoriu'
+              too_short: 'Numele trebuie să conțină cel puțin 3 caractere'
+              too_long: 'Numele nu trebuie să conțină mai mult de 20 caractere'
+              invalid: 'Numele poate conține doar litere'
+            first_name:
+              blank: 'Prenumele este obligatoriu'
+              too_short: 'Prenumele trebuie să conțină cel puțin 3 caractere'
+              too_long: 'Prenumele nu trebuie să conțină mai mult de 20 caractere'
+              invalid: 'Prenumele poate conține doar litere'
+            birthday:
+              blank: 'Data nașterii este obligatorie'
     models:
       student:
         one:
@@ -67,12 +108,17 @@ ro:
         mother_phone_number: 'Telefonul mamei'
         mother_email: 'Email-ul mamei'
         gender: 'Gen'
+        gender_display: 'Gen'
         inside_code_token: 'Codul intern'
         born_at: 'Data nașterii'
         idnp_token: 'IDNP'
+        age: 'Vârstă'
       student_group:
         current_grade: 'Clasa curentă'
+        current_grade_safe: 'Clasa curentă'
+        main_teacher: 'Diriginte'
         suffix: 'Paralela'
+        profile: 'Profil'
         profile_slug: 'Profil'
         students_count: 'Nr. elevi'
         student_groups: 'Diriginte'
@@ -88,16 +134,33 @@ ro:
         is_main_teacher: 'Diriginte'
         nationality: 'Naționalitatea'
         subjects: 'Materii'
+        subject_ids: 'Materii'
         birthday: 'Data nașterii'
         retired: 'Pensionar'
         syndicate_member: 'Membru de sindicat'
         phone: 'Telefon'
-        degree: 'Grad didactic'
         idnp_token: 'IDNP'
         graduated_from: 'Instituția absolvită'
         degree: 'Gradul didactic'
+        degree_display: 'Gradul didactic'
         degree_reeval_year: 'Anul confirmării gradului'
         gender: 'Gen'
+    values:
+      student:
+        gender:
+          male: 'Băiat'
+          female: 'Fată'
+      teacher:
+        degree:
+          doctorate: 'Doctorat'
+          superior_degree: 'Superior'
+          first_degree: 'Gradul I'
+          second_degree: 'Gradul II'
+          third_degree: 'Gradul III'
+      student_group:
+        profile_slug:
+          real: 'Real'
+          humanitarian: 'Uman'
   devise:
     failure:
       user:
@@ -134,8 +197,8 @@ ro:
         greater_than: 'Mai mare ca'
         less_than: 'Mai mic ca'
     status_tag:
-      "yes": 'Da'
-      "no": 'Nu'
+      yes: 'Da'
+      no: 'Nu'
     search_status:
       headline: 'Starea căutării:'
       current_scope: 'Domeniul:'
