Return nil in-case attribute is nil

--- a/config/locales/ro.yml
+++ b/config/locales/ro.yml
@@ -118,7 +118,7 @@ ro:
         current_grade_safe: 'Clasa curentă'
         main_teacher: 'Diriginte'
         suffix: 'Paralela'
-        profile: 'Profil'
+        profile_display: 'Profil'
         profile_slug: 'Profil'
         students_count: 'Nr. elevi'
         student_groups: 'Diriginte'
